<resources>
    <string name="app_name">TravelGuide</string>
    <string name="logo_name">Get A Way </string>
    <string name="slogo_name">Everything Your City Holds is Here</string>
    <string name="s1logo_name"> Welcome to Travel Guide</string>
    //Strings for onboarding screen
    //Titles
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back and Enjoy</string>

    //Description
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city.We will display specific or all related shops to match your search</string>
    <string name="second_slide_desc">We provide numbers of almost  all the departments and shops registered with us.You can perform Bookings as well</string>
    <string name="third_slide_desc"> You can search any place nearby or with in the specified city.We will display specific or all related shops to match your search</string>
    <string name="fourth_slide_desc">We will handle everything for you.As you have the app in your pocket then you dont have to worry for anything</string>

    //Buttons
    <string name="skip_btn">Skip</string>

    <string name="next_btn">Next</string>

    <string name="let_get_started">Lets Get Started</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>


    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="exit">EXIT</string>

    ///Dashboard
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shopping</string>
    <string name="theatre">Theatre</string>
    <string name="banks">Banks</string>
    <string name="tourist_place">Places</string>

    //Titles and desc of Dahsboard
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>

    <string name="car_rent">Car Rent</string>
    <string name="restaurant">Restaurant</string>
    <string name="hospital">Hospitals</string>
    <string name="shop">Shops</string>
    <string name="expand_all">EXPAND ALL</string>

    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="remember">Remember Me</string>


    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow <br>Your Business</br></string>
    <string name="retailer_tag_line">We will help you to grow your business using online services!</string>
    <string name="create_account">Create <br> Account</br></string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password?</string>
    <string name="forgot_password_detail">Provide your account email for which you want to reset your password</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="via_sms">via sms</string>
    <string name="via_email">via email</string>
    <string name="new_cred">New Credentials</string>
    <string name="new_cred_detail">Your Identity has been verified!!<br>Set Your new password</br></string>
    <string name="ph_no">Phone Number</string>
    <string name="password_sign">Password</string>
    <string name="password_updte">Password Updated</string>
    <string name="password_updte_success_message">Your Password has been updated</string>
    <string name="signup_sucess">SignUp Sucessful</string>
    <string name="email_enter"> Enter Email</string>


</resources>