<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
    android:id="@+id/nav_home"
    android:title="@string/home"
    android:icon="@drawable/menu_icon"/>

    <item
        android:id="@+id/nav_all_categories"
        android:title="@string/all_categories"
        android:icon="@drawable/menu_category_icon"/>



</group>


    <item android:title="Profile">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/menu_loginn"/>

            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:icon="@drawable/menu_profile"/>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/menu_logout"/>
                <item
                    android:id="@+id/nav_exit"
                    android:title="@string/exit"
                    android:icon="@drawable/exit"/>
            </group>

        </menu>
    </item>
</menu>