<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hmepge"
    android:padding="30dp"
    tools:context=".Common.LoginSignup.RetailerStartUpScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/skip_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:drawableEnd="@drawable/skip_icon"
            android:padding="10dp"
            android:text="@string/skip_btn"
            android:fontFamily="@font/wendy_one"
            android:textColor="@color/black"
            android:drawableRight="@drawable/skip_icon" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/retailer_circle_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_semibold"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/black"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/sign_up"
                android:textColor="@color/black" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/how_we_work"
            android:textColor="@color/black" />
    </LinearLayout>


</ScrollView>