<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.ForgotPassword"
    android:background="@drawable/bg2"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/make_selection_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_buttn"
            android:padding="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/muli_black"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_selection_detail"
            android:textSize="18sp"
            android:fontFamily="@font/muli_light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="50dp"
            android:background="@color/Ghost"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mobile_custom_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mobile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+912323456789"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:layout_toRightOf="@id/mobile_icon"
                android:layout_below="@id/mobile_title" />

            <Button
                android:id="@+id/sms"
                android:transitionName="transition_sms_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="50dp"
            android:background="@color/Ghost"
            android:padding="10dp">

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/field_email_icon"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_marginTop="35dp"/>

            <TextView
                android:id="@+id/mail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="support@gmail.com"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:fontFamily="@font/muli_light"
                android:layout_toRightOf="@id/mail_icon"
                android:layout_below="@id/mail_title" />

            <Button
                android:id="@+id/email_id"
                android:transitionName="transition_email_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"/>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>