<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserDashboard"
    android:id="@+id/drawer_layout">


<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigation_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nvbgg"
    android:theme="@style/navigation_theme"
    android:layout_gravity="start"
    app:headerLayout="@layout/menu_header"
    app:menu="@menu/main_menu"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_home"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:elevation="6dp"
                android:src="@drawable/menu"/>

            <ImageView
                android:id="@+id/login_signup"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="callRetailerScreens"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:elevation="6dp"
                android:src="@drawable/add_missing_place_icon" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/crimson_text_bold"
                        android:text="@string/logo_name"
                        android:textColor="@color/Blue"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/card1"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/dashboard_rest_icon"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/restaurant_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/restaurants"
                            android:textColor="@color/Ghost"
                            android:fontFamily="@font/muli_black"
                            android:textAlignment="center" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/card2"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/lodgingclick"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/hotel_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="Lodging"
                            android:textColor="@color/Ghost"
                            android:fontFamily="@font/muli_black"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/card3"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/travelclick"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/travel_icon" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/tourist_place"
                            android:textColor="@color/Ghost"
                            android:fontFamily="@font/muli_black"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/card4"
                            android:elevation="8dp">

                            <ImageView
                                android:id="@+id/theatre_click"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/cinema" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/theatre"
                            android:textColor="@color/Ghost"
                            android:fontFamily="@font/muli_black"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/main_home">

                    <LinearLayout
                        android:id="@+id/featured_background"
                        android:layout_width="150dp"
                        android:layout_height="280dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFFAF0"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:text="@string/featured_locations"
                            android:textAllCaps="true"
                            android:fontFamily="@font/muli_black"
                            android:textColor="@color/black"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/featured_locations_description" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_toRightOf="@id/featured_background"
                        android:background="@drawable/main_home" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="20dp">




                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>